Finalizando aplicação com Cadastro de usuario

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -11,4 +11,10 @@
     <input type="password" ng-model="usuario.senha" class="form-control">
   </div>
   <input type="submit" value="Entrar" class="btn btn-primary">
+
+  <br>
+  <br>
+  <p>
+    Não é cadastro? <a href="/#/registrar">Registre-se agora!</a>
+  </p>
 </form>
